--- a/CorrelationTest/CorrelationTest.csproj
+++ b/CorrelationTest/CorrelationTest.csproj
@@ -183,6 +183,8 @@
     </Compile>
     <Compile Include="CorrelationMatrix.cs" />
     <Compile Include="CorrelationSheet.cs" />
+    <Compile Include="CorrelationSheet_Inputs.cs" />
+    <Compile Include="CorrelationSheet_Phasing.cs" />
     <Compile Include="CorrelationString_Inputs.cs" />
     <Compile Include="CorrelationString.cs" />
     <Compile Include="CorrelationString_Periods.cs" />
