--- a/CorrelationTest/CorrelationTest.csproj
+++ b/CorrelationTest/CorrelationTest.csproj
@@ -182,6 +182,8 @@
       <DependentUpon>CorrelationForm.cs</DependentUpon>
     </Compile>
     <Compile Include="CorrelationMatrix.cs" />
+    <Compile Include="CorrelationMatrix_Inputs.cs" />
+    <Compile Include="CorrelationMatrix_Phasing.cs" />
     <Compile Include="CorrelationSheet.cs" />
     <Compile Include="CorrelationSheet_Inputs.cs" />
     <Compile Include="CorrelationSheet_Phasing.cs" />
