--- a/CorrelationTest/CorrelationTest.csproj
+++ b/CorrelationTest/CorrelationTest.csproj
@@ -196,6 +196,9 @@
     <Compile Include="CorrelationString_PM.cs" />
     <Compile Include="CorrelationString_PT.cs" />
     <Compile Include="CorrelSheetSpecs.cs" />
+    <Compile Include="CostEstimate.cs" />
+    <Compile Include="CostScheduleEstimate.cs" />
+    <Compile Include="IJointEstimate.cs" />
     <Compile Include="ISub.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="CostSheet.cs" />
@@ -212,6 +215,8 @@
     <Compile Include="Link.cs" />
     <Compile Include="Period.cs" />
     <Compile Include="PeriodID.cs" />
+    <Compile Include="ScheduleCostEstimate.cs" />
+    <Compile Include="ScheduleEstimate.cs" />
     <Compile Include="Sum_Item.cs" />
     <Compile Include="Triple.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
