--- a/CorrelationTest/CorrelationTest.csproj
+++ b/CorrelationTest/CorrelationTest.csproj
@@ -190,12 +190,12 @@
     <Compile Include="CorrelationSheet_Cost.cs" />
     <Compile Include="CorrelationSheet_Phasing.cs" />
     <Compile Include="CorrelationString_DM.cs" />
-    <Compile Include="CorrelationString_DT.cs" />
+    <Compile Include="CorrelationString_DP.cs" />
     <Compile Include="CorrelationString_CM.cs" />
     <Compile Include="CorrelationString.cs" />
-    <Compile Include="CorrelationString_CT.cs" />
+    <Compile Include="CorrelationString_CP.cs" />
     <Compile Include="CorrelationString_PM.cs" />
-    <Compile Include="CorrelationString_PT.cs" />
+    <Compile Include="CorrelationString_PP.cs" />
     <Compile Include="CorrelSheetSpecs.cs" />
     <Compile Include="CostEstimate.cs" />
     <Compile Include="CostScheduleEstimate.cs" />
@@ -215,6 +215,7 @@
     <Compile Include="IHasSubs.cs" />
     <Compile Include="Input_Item.cs" />
     <Compile Include="Link.cs" />
+    <Compile Include="PairSpecification.cs" />
     <Compile Include="Period.cs" />
     <Compile Include="PeriodID.cs" />
     <Compile Include="ScheduleCostEstimate.cs" />
