Got the Fit Matrix method in Sandbox working. Needs moved into PairSpecification and integrated with CorrelationSheet for use.

--- a/CorrelationTest/CorrelationTest.csproj
+++ b/CorrelationTest/CorrelationTest.csproj
@@ -219,6 +219,7 @@
     <Compile Include="PairSpecification.cs" />
     <Compile Include="Period.cs" />
     <Compile Include="PeriodID.cs" />
+    <Compile Include="Sandbox.cs" />
     <Compile Include="ScheduleCostEstimate.cs" />
     <Compile Include="ScheduleEstimate.cs" />
     <Compile Include="Sum_Item.cs" />
