--- a/CorrelationTest/CorrelationTest.csproj
+++ b/CorrelationTest/CorrelationTest.csproj
@@ -206,6 +206,7 @@
     <Compile Include="CorrelSheetSpecs.cs" />
     <Compile Include="CostEstimate.cs" />
     <Compile Include="CostScheduleEstimate.cs" />
+    <Compile Include="Diagnostics.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="MyGlobals.cs" />
     <Compile Include="IJointEstimate.cs" />
