Need to figure out how correlation is going to work with joint estimates. Added IEstimateDistribution to handle accord and custom types of distributions.

--- a/CorrelationTest/CorrelationTest.csproj
+++ b/CorrelationTest/CorrelationTest.csproj
@@ -206,15 +206,17 @@
     <Compile Include="CorrelSheetSpecs.cs" />
     <Compile Include="CostEstimate.cs" />
     <Compile Include="CostScheduleEstimate.cs" />
+    <Compile Include="CustomDistribution.cs" />
     <Compile Include="Diagnostics.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="IEstimateDistribution.cs" />
     <Compile Include="MyGlobals.cs" />
     <Compile Include="IJointEstimate.cs" />
     <Compile Include="ISub.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="CostSheet.cs" />
     <Compile Include="DisplayCoords.cs" />
-    <Compile Include="Distribution.cs" />
+    <Compile Include="SpecifiedDistribution.cs" />
     <Compile Include="Estimate_Item.cs" />
     <Compile Include="EstimateSheet.cs" />
     <Compile Include="ExtensionMethods.cs" />
