Estimate sheet working and visualizing. WBS sheet needs checked. Phasing distribution parameter storage still needs worked out.

--- a/CorrelationTest/CorrelationTest.csproj
+++ b/CorrelationTest/CorrelationTest.csproj
@@ -208,6 +208,7 @@
     <Compile Include="CostScheduleEstimate.cs" />
     <Compile Include="CustomDistribution.cs" />
     <Compile Include="Diagnostics.cs" />
+    <Compile Include="Distribution.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="IEstimateDistribution.cs" />
     <Compile Include="MyGlobals.cs" />
