--- a/CorrelationTest/CorrelationTest.csproj
+++ b/CorrelationTest/CorrelationTest.csproj
@@ -209,17 +209,11 @@
     <Compile Include="CustomDistribution.cs" />
     <Compile Include="Diagnostics.cs" />
     <Compile Include="Distribution.cs" />
-    <Compile Include="DrawingForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DrawingForm.Designer.cs">
-      <DependentUpon>DrawingForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Enums.cs" />
     <Compile Include="IEstimateDistribution.cs" />
     <Compile Include="IMatrixSpec.cs" />
     <Compile Include="IPairwiseSpec.cs" />
-    <Compile Include="LineSegment.cs" />
+    <Compile Include="DrawnCorrelation.cs" />
     <Compile Include="MyGlobals.cs" />
     <Compile Include="IJointEstimate.cs" />
     <Compile Include="ISub.cs" />
@@ -262,9 +256,6 @@
     <EmbeddedResource Include="CorrelationForm.resx">
       <DependentUpon>CorrelationForm.cs</DependentUpon>
       <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DrawingForm.resx">
-      <DependentUpon>DrawingForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
