--- a/CorrelationTest/CorrelationTest.csproj
+++ b/CorrelationTest/CorrelationTest.csproj
@@ -209,6 +209,7 @@
     <Compile Include="CustomDistribution.cs" />
     <Compile Include="Diagnostics.cs" />
     <Compile Include="Distribution.cs" />
+    <Compile Include="DrawingTool.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="IEstimateDistribution.cs" />
     <Compile Include="IMatrixSpec.cs" />
@@ -258,13 +259,14 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Ribbon1.resx">
       <DependentUpon>Ribbon1.cs</DependentUpon>
@@ -290,6 +292,15 @@
       <DependentUpon>ThisAddIn.Designer.xml</DependentUpon>
     </Compile>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CircleCursor.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CircleCursor.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CircleCursor.cur" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
